Adiciona servlet login

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -4,4 +4,7 @@ j2ee.server.domain=C:/glassfish6/glassfish/domains/domain1
 j2ee.server.home=C:/glassfish6/glassfish
 j2ee.server.instance=[C:\\glassfish6\\glassfish;C:\\glassfish6\\glassfish\\domains\\domain1]deployer:gfv610ee9:localhost:4848
 j2ee.server.middleware=C:/glassfish6
+javac.debug=true
+javadoc.preview=true
+selected.browser=SL[/Browsers/FirefoxBrowser
 user.properties.file=C:\\Users\\juann\\AppData\\Roaming\\NetBeans\\15\\build.properties
