--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,49 @@
-/dist/
+##########################
+## Java
+##########################
+
+*.class
+.mtj.tmp/
+*.war
+*.ear
+hs_err_pid*
+
+##########################
+## NetBeans
+##########################
+
+nbproject/private/
+build/
+nbbuild/
+dist/
+nbdist/
+nbactions.xml
+nb-configuration.xml
+
+##########################
+## IntelliJ
+##########################
+
+*.iml
+.idea/
+*.ipr
+*.iws
+out/
+.idea_modules/
+
+##########################
+## Eclipse
+##########################
+
+.metadata
+.classpath
+.project
+.settings/
+bin/
+tmp/
+*.tmp
+*.bak
+*.swp
+*~.nib
+local.properties
+.loadpath
