--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,4 +1,4 @@
-deploy.ant.properties.file=C:\\Users\\juann\\AppData\\Roaming\\NetBeans\\15\\config\\GlassFishEE6\\Properties\\gfv31549936414.properties
+deploy.ant.properties.file=C:\\Users\\Felipe\\AppData\\Roaming\\NetBeans\\14\\config\\GlassFishEE6\\Properties\\gfv31549936414.properties
 j2ee.platform.is.jsr109=true
 j2ee.server.domain=C:/glassfish6/glassfish/domains/domain1
 j2ee.server.home=C:/glassfish6/glassfish
@@ -7,4 +7,4 @@ j2ee.server.middleware=C:/glassfish6
 javac.debug=true
 javadoc.preview=true
 selected.browser=SL[/Browsers/FirefoxBrowser
-user.properties.file=C:\\Users\\juann\\AppData\\Roaming\\NetBeans\\15\\build.properties
+user.properties.file=C:\\Users\\Felipe\\AppData\\Roaming\\NetBeans\\14\\build.properties
