--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -40,7 +40,9 @@ j2ee.platform.wsimport.classpath=${j2ee.server.home}/modules/webservices-osgi.ja
 j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv610ee9
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${libs.jstl.classpath}:\
+    ${libs.PostgreSQLDriver.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
