--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -4,7 +4,7 @@ annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
 build.classes.dir=${build.web.dir}/WEB-INF/classes
-build.classes.excludes=**/*.java,**/*.form
+build.classes.excludes=**/*.form
 build.dir=build
 build.generated.dir=${build.dir}/generated
 build.generated.sources.dir=${build.dir}/generated-sources
@@ -28,6 +28,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=
 excludes=
 file.reference.postgresql-42.5.1.jar=C:\\Users\\juann\\Downloads\\postgresql-42.5.1.jar
+file.reference.SendMail-1.0.jar=C:\\Users\\juann\\Documents\\programming\\web2\\SendMail\\target\\SendMail-1.0.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -42,7 +43,8 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv610ee9
 jar.compress=false
 javac.classpath=\
-    ${file.reference.postgresql-42.5.1.jar}
+    ${file.reference.postgresql-42.5.1.jar}:\
+    ${file.reference.SendMail-1.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -82,7 +84,8 @@ source.encoding=UTF-8
 source.root=src
 src.dir=${source.root}/java
 test.src.dir=test
-war.content.additional=
+war.content.additional=\
+    ${file.reference.SendMail-1.0.jar}
 war.ear.name=${war.name}
 war.name=lavanderia.war
 web.docbase.dir=web
