--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -43,8 +43,7 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv610ee9
 jar.compress=false
 javac.classpath=\
-    ${file.reference.postgresql-42.5.1.jar}:\
-    ${file.reference.SendMail-1.0.jar}
+    ${file.reference.postgresql-42.5.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
